Bug 1674254 - Inside a WebWorker context, calling performance.addEventListener throws a generic NS_ERROR_FAILURE, r=barret

Differential Revision: https://phabricator.services.mozilla.com/D97805